--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "fs": "0.0.1-security",
-    "ibm-watson": "^5.7.1",
+    "ibm-watson": "^5.7.1"
   }
 }
